  * 2013-08-30 fimex-0.47.2
    * fixed grib-file overruling of earth radius
  * 2013-08-26 fimex-0.47.1
    * allowing to extract only first dimension element (start=end=0)
    * fixing lambert-projection parameters in felt
    * fixing typo's in VerticalTransformation API
    * fixing time-interpolation when units-change
    * makeing Logger thread-safe
  * 2013-08-12 fimex-0.47
    * adding vertical cross-section interpolation
    * exposing vertical-transformations
    * (re-)adding SliceBuilder interface to NcML aggregation (reduce memory-consumption)
      * was dropped in 0.45
    * allow ncml to add values to unlimited dimensions
    * grib-reader allows time-unit change
  * 2013-06-12 fimex-0.46.1
    * warning, not failing with old grib-config files
  * 2013-06-12 fimex-0.46
    * grib-reading automatically adds unknown levels
    * grib-reading allows adding of ensemble dimension (glameps) (E. de Vreede)
    * grib-reading using globs or regexp
    * grib-reading read hybrid-values
    * grib-reading by timeRangeIndicator
    * configurable shuffling in netcdf4 (default on)
    * creepfillval to certain value instead of average
    * fixing vector reprojection together with preprocessing
    * fixing threading bug in forward-interpolation
  * 2013-05-20 fimex-0.45
    * adding ncml-aggregation, union and joinExisting
    * allow reading of other filetypes than netcdf in ncml
    * auto-detection of vectors by CF standard_names
    * vector-reprojection when selecting lat/lon-points
    * improved vector-rotation algorithm
    * lambert-projection for grib-writer
    * small improvements in example-input files
  * 2013-04-11 fimex-0.44.2
    * fix bug with netcdf-CDMReaderWriter and empty variables
    * fix direction of vertical axes for pressure, sigma and sigma-hybrid
  * 2013-04-08 fimex-0.44.1
    * allow file-generation from pure ncml
  * 2013-04-08 fimex-0.44
    * process.accumulate option to accumulate data along unlim (time)-dimension