@@ -2,7 +2,7 @@ fimex (0.48-1) lucid; urgency=low
 
   * initial upload
 
- -- Heiko Klein <heiko.klein@met.no>  Wed, 01 Oct 2013 13:00:00 +0200
+ -- Heiko Klein <heiko.klein@met.no>  Wed, 03 Oct 2013 13:00:00 +0200
 
 fimex (0.47.2-1) lucid; urgency=low
 
