@@ -1,3 +1,8 @@
+  * 2013-10-03 fimex-0.48
+    * vector-autorotation from command-line
+    * printSize estimates
+    * improved error-messages
+    * scalar values allowed from ncml
   * 2013-08-30 fimex-0.47.2
     * fixed grib-file overruling of earth radius
   * 2013-08-26 fimex-0.47.1
